--- a/.gitignore
+++ b/.gitignore
@@ -361,5 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-.mongo-data/
-.redis-data/
+/.mongo-data/
+/.redis-data/
